<resources>
    <string name="app_name">Drink Mixer</string>

    <string name="hello_world">Hello world!</string>
    <string name="frontpage_text">Welcome to Drink Mixer</string>
    <string name="frontpage_text2">Select a drink to get started</string>
    <string name="action_settings">Settings</string>
    <string name="drink1">Rum and Coke</string>
    <string name="drink2">Vodka and Orange</string>

    <string name="title_activity_drink1">Rum and Coke</string>
    <string name="drink1_text">This drink consists of one part rum and two parts coke</string>

    <string name="title_activity_drink2">Vodka and Orange</string>
    <string name="drink2_text">This drink consists of one part vodka and two parts Orange juice</string>
    <string name="cocktail_pic">main_page_pic</string>
    <string name="bg_main">background image</string>
    <string name="rum_make">Make</string>

    <string name="making">The drink is being made</string>
    <string name="title_activity_make_drink1">make_drink1</string>

</resources>
