<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".FrontPage"
    android:background="@drawable/bgimage">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:contentDescription="@string/bg_main"
        android:layout_above="@+id/frontpage_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView android:text="@string/frontpage_text" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frontpage_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/frontpage_text2"
        android:id="@+id/frontpage_text2"
        android:layout_below="@+id/frontpage_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:textColor="#ffffff"
        android:textColorHighlight="#27fff2ed" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drink1"
        android:id="@+id/drink1"
        android:layout_above="@+id/drink2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="81dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drink2"
        android:id="@+id/drink2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
